added toolbar with add button and about us button

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,11 @@
 #container a {
   text-decoration: none;
 }
+.aboutus{
+  font-size:x-small;
+}
+.title{
+  text-align: center;
+  justify-content: center;
+  padding-left: 10%;
+}
