--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,21 +1,24 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Restaurant Guide
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar color="primary">
+  <ion-title> </ion-title>
+</ion-toolbar>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="small">Restaurant Guide
-      </ion-title>
+<ion-content>
+  <div>
+    <ion-toolbar class="toolbar" color="primary">
+      <ion-text class="title">Restaurant Guide</ion-text>
+      <ion-buttons slot="primary">
+        <ion-button (click)="clickedAdd()">
+          <ion-icon slot="icon-only" name="add" size="medium"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-buttons slot="secondary">
+        <ion-button (click)="clickedAboutUs()">
+          <ion-text class="aboutus">About Us</ion-text>
+        </ion-button>
+      </ion-buttons>
     </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
+
+ 
+  <div id="container"></div>
 </ion-content>
