--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
     </ion-toolbar>
   </div>
 
-  <ion-toolbar>
+  <ion-toolbar class="search">
     <ion-buttons slot="primary">
       <ion-button (click)="clickedSearch()">
         <ion-icon slot="icon-only" name="search"></ion-icon>
