--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,7 @@
         </ion-button>
       </ion-buttons>
       <ion-buttons slot="secondary">
-        <ion-button (click)="clickedAboutUs()">
+        <ion-button (click)="aboutUs()">
           <ion-text class="aboutus">About Us</ion-text>
         </ion-button>
       </ion-buttons>
