--- a/src/app/about-us/about-us.page.html
+++ b/src/app/about-us/about-us.page.html
@@ -1,12 +1,10 @@
-<ion-header>
-  
-</ion-header>
+<ion-header> </ion-header>
 
 <ion-content>
   <div id="container">
-  <h6 >Afshan Momin - 101027107</h6>
-  <h6 >NIshtha Patel - 101241116</h6>
-  <h6 >Shrey Patel - 101281313</h6>
-
-</div>
+    <img class="displayPic" src="../../assets/team.png" alt="team" />
+    <h6>Afshan Momin - 101027107</h6>
+    <h6>NIshtha Patel - 101241116</h6>
+    <h6>Shrey Patel - 101281313</h6>
+  </div>
 </ion-content>
