Back Button Implementation & UI Fix

--- a/src/app/about-us/about-us.page.html
+++ b/src/app/about-us/about-us.page.html
@@ -1,4 +1,11 @@
-<ion-header> </ion-header>
+<ion-header> 
+  <ion-toolbar color="primary">
+    <ion-title >About Us</ion-title>
+      <ion-buttons  slot="start">
+        <ion-back-button  defaultHref="home"></ion-back-button>
+      </ion-buttons>
+    </ion-toolbar>
+</ion-header>
 
 <ion-content>
   <div id="container">
