--- a/src/app/add-restaurant/add-restaurant.page.html
+++ b/src/app/add-restaurant/add-restaurant.page.html
@@ -1,7 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>add-restaurant</ion-title>
-  </ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-title class="ion-text-center" size="small" >Add Restaurant</ion-title>
+      <ion-buttons  slot="start">
+        <ion-back-button  defaultHref="home"></ion-back-button>
+      </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
