--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
     <ion-toolbar class="toolbar" color="primary">
       <ion-text class="title">Restaurant Guide</ion-text>
       <ion-buttons slot="primary">
-        <ion-button (click)="clickedAdd()">
+        <ion-button (click)="addRestaurant()">
           <ion-icon slot="icon-only" name="add" size="medium"></ion-icon>
         </ion-button>
       </ion-buttons>
