--- a/src/app/add-restaurant/add-restaurant.page.html
+++ b/src/app/add-restaurant/add-restaurant.page.html
@@ -10,35 +10,54 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Restaurant Name</ion-label>
-    <ion-input placeholder='Restaurant Name' type='text' ></ion-input>
+    <ion-input placeholder='Restaurant Name' type='text' [(ngModel)]="name" ></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Street Number</ion-label>
-    <ion-input placeholder='Street Number'></ion-input>
+    <ion-input placeholder='Street Number' [(ngModel)]="streetNo"></ion-input>
 
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Street Name</ion-label>
-    <ion-input placeholder='Street Name' ></ion-input>
+    <ion-input placeholder='Street Name' [(ngModel)]="streetName" ></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Street Type</ion-label>
-    <ion-select placeholder="Select One">
+    <ion-select placeholder="Select One" [(ngModel)]="streetType">
       <ion-select-option value="Avenue">Avenue</ion-select-option>
       <ion-select-option value="Street">Street</ion-select-option>
-      <ion-select-option value="Alley">Alley</ion-select-option>
-      <ion-select-option value="Quay">Quay</ion-select-option>
       <ion-select-option value="Road">Road</ion-select-option>
-      <ion-select-option value="Lane">Lane</ion-select-option>
-      <ion-select-option value="Cul-de-sac">Cul-de-sac</ion-select-option>
       <ion-select-option value="Drive">Drive</ion-select-option>
 
     </ion-select>
     </ion-item>
     <ion-item>
       <ion-label position="floating">City</ion-label>
-      <ion-input placeholder='City'  [(ngModel)]="city"></ion-input>
+      <ion-input placeholder='City' [(ngModel)]="city"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label position="floating">Phone</ion-label>
+      <ion-input placeholder='Phone' type="number" [(ngModel)]="number"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position='fixed' >Rating(1-5)</ion-label>
+      <br>
+      
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Tags</ion-label>
+      <ion-input placeholder='Tags' ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Comments</ion-label>
+      <ion-textarea ></ion-textarea>
+    </ion-item>
+
+    <ion-button type="submit" (click)="addRestaurant()">Add Restaurant</ion-button>
+
 </ion-content>
