--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,5 +27,16 @@
     </ion-buttons>
     <ion-searchbar placeholder="Search Favorites"></ion-searchbar>
   </ion-toolbar>
-  <div id="container"></div>
+  <div id="container">
+    <div *ngIf="allRestaurant.length === 0">
+      <ion-text>There is no restaurants i a list!</ion-text>
+    </div>
+    <ion-list *ngFor="let item of allRestaurant">
+      <ion-item>
+        <ion-label>{{item.id}} - {{item.restaurantName}}</ion-label>
+      
+      </ion-item>
+    </ion-list>
+  
+  </div>
 </ion-content>
