--- a/src/app/add-restaurant/add-restaurant.page.html
+++ b/src/app/add-restaurant/add-restaurant.page.html
@@ -8,11 +8,18 @@
 </ion-header>
 
 <ion-content>
+  <div id="container">
+    <ion-text> Add Restaurant </ion-text>
+  </div>
   <ion-item>
     <ion-label position="floating">Restaurant Name</ion-label>
     <ion-input placeholder='Restaurant Name' type='text' [(ngModel)]="name" ></ion-input>
   </ion-item>
 
+  <ion-item>
+    <ion-label position="floating">Address</ion-label>
+    <ion-input placeholder='Address' type='text' [(ngModel)]="Address" ></ion-input>
+  </ion-item>
   <!-- <ion-item>
     <ion-label position="floating">Street Number</ion-label>
     <ion-input placeholder='Street Number' [(ngModel)]="streetNo"></ion-input>
@@ -48,16 +55,24 @@
       
     </ion-item> -->
 
-    <ion-item>
-      <ion-label position="floating">Tags</ion-label>
-      <ion-input placeholder='Tags' ></ion-input>
-    </ion-item>
+   
 
     <ion-item>
-      <ion-label>Description</ion-label>
+      <ion-label position="floating">Description</ion-label>
       <ion-textarea type="text" placeholder="Enter Description" [(ngModel)]="description"></ion-textarea>
     </ion-item>
+    <ion-item>
+      <ion-label position="floating">Tags</ion-label>
+      <ion-input placeholder='Tags' type='text' [(ngModel)]="tags" ></ion-input>
+    </ion-item>
+    <br/>
 
-    <ion-button type="submit" (click)="addRestaurant()">Add Restaurant</ion-button>
-
+    <ion-row>
+      <ion-col col-6> 
+          <ion-button type="submit" (click)="addRestaurant()">Cancel</ion-button>
+        </ion-col>
+        <ion-col col-6>
+          <ion-button type="submit" (click)="addRestaurant()">Add Restaurant</ion-button>
+        </ion-col>
+    </ion-row>
 </ion-content>
