--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -8,23 +8,23 @@
   transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.listContainer {
+  max-width: 600px;
+  &__text {
+    display: block;
+    width: 100px;
+    height: fit-content;
+  }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ #image{
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin: 5px 0px 5px 5px;
 }
 
-#container a {
-  text-decoration: none;
-}
+
 .aboutus{
   font-size:x-small;
 }
