--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -36,7 +36,7 @@
    
   <div class="listContainer">
     <ion-list *ngFor="let item of allRestaurant">
-      <ion-item>
+      <ion-item >
         <!-- <ion-grid>
           <ion-row style="--ion-grid-columns: 12;"> -->
             <!-- <ion-col> -->
@@ -45,12 +45,12 @@
             <ion-col> -->
               <div class="container__text">
               <ion-label>  {{item.restaurantName}}</ion-label>
-              <ion-label>  {{item.description}}</ion-label>
+              <ion-label text-wrap>  {{item.description}}</ion-label>
             </div>
             <!-- </ion-col>
           </ion-row>
         </ion-grid> -->
-      </ion-item>
+      </ion-item >
     </ion-list>
     </div>
 
