Cancel button added

--- a/src/app/add-restaurant/add-restaurant.page.html
+++ b/src/app/add-restaurant/add-restaurant.page.html
@@ -69,7 +69,7 @@
 
     <ion-row>
       <ion-col col-6> 
-          <ion-button type="submit" (click)="addRestaurant()">Cancel</ion-button>
+          <ion-button color="danger"  (click)="cancel()" role="button">Cancel</ion-button>
         </ion-col>
         <ion-col col-6>
           <ion-button type="submit" (click)="addRestaurant()">Add Restaurant</ion-button>
