--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,7 +35,7 @@
   </div>
    
   <div class="listContainer">
-    <ion-list *ngFor="let item of allRestaurant">
+    <ion-list *ngFor="let item of allRestaurant" (click)="getRestaurant()">
       <ion-item >
         <!-- <ion-grid>
           <ion-row style="--ion-grid-columns: 12;"> -->
