--- a/src/app/restaurant-details/restaurant-details.page.html
+++ b/src/app/restaurant-details/restaurant-details.page.html
@@ -1,9 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Restaurant-Details</ion-title>
+    <ion-title>Restaurant Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <div class="listContainer">
+  <ion-list *ngFor="let item of getRestaurantById()">
+    <ion-item >
+     
+       
+            <div class="container__text">
+            <ion-label>  {{item.restaurantName}}</ion-label>
+            <ion-label text-wrap>  {{item.description}}</ion-label>
+          </div>
+       
+    </ion-item >
+  </ion-list>
+  </div>
 </ion-content>
+
