--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -30,32 +30,33 @@
   <div id="container">
     <div *ngIf="allRestaurant.length === 0">
       <ion-text>There is no restaurants in a list!</ion-text>
-      <br/><ion-text>Add Restaurant First!</ion-text>
+      <br /><ion-text>Add Restaurant First!</ion-text>
     </div>
   </div>
-   
+
   <div class="listContainer">
     <ion-list *ngFor="let item of allRestaurant" (click)="getRestaurant()">
-      <ion-item >
-        <!-- <ion-grid>
+      <div (click)="navigateToViewRestaurant(item.id)">
+        <ion-item>
+          <!-- <ion-grid>
           <ion-row style="--ion-grid-columns: 12;"> -->
-            <!-- <ion-col> -->
-              <ion-img class="container__image"  src="../../assets/pasta.jpeg" id="image"></ion-img>
-            <!-- </ion-col>
+          <!-- <ion-col> -->
+          <ion-img
+            class="container__image"
+            src="../../assets/pasta.jpeg"
+            id="image"
+          ></ion-img>
+          <!-- </ion-col>
             <ion-col> -->
-              <div class="container__text">
-              <ion-label>  {{item.restaurantName}}</ion-label>
-              <ion-label text-wrap>  {{item.description}}</ion-label>
-              <button 
-      (click)='navigateToViewRestaurant(item.id)'>view</button>
-            </div>
-            <!-- </ion-col>
+          <div class="container__text">
+            <ion-label> {{item.restaurantName}}</ion-label>
+            <ion-label text-wrap> {{item.description}}</ion-label>
+          </div>
+          <!-- </ion-col>
           </ion-row>
         </ion-grid> -->
-      </ion-item >
+        </ion-item>
+      </div>
     </ion-list>
-    </div>
-
-  
-
+  </div>
 </ion-content>
