--- a/src/app/view-restaurant/view-restaurant.page.html
+++ b/src/app/view-restaurant/view-restaurant.page.html
@@ -19,12 +19,12 @@
   <div>
     
     <div class="content">
+      
         <ion-text>Name : {{restaurant.restaurantName}}</ion-text><br/>
-   
         <ion-text>Description : {{restaurant.description}}</ion-text><br/>
         <ion-text>Tag : {{restaurant.tag}} </ion-text><br/><br/>
             
-        <ion-button (click)="appComponent.goBack()">Cancel</ion-button>
+        <ion-button  (click)="cancel()"> Cancel</ion-button>
     </div>
   </div>
 </ion-content>
