--- a/src/app/view-restaurant/view-restaurant.page.html
+++ b/src/app/view-restaurant/view-restaurant.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>View Restaurant</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title class="ion-text-center" size="small">View Restaurant</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="home"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
