Edit res added and UI update with buttons

--- a/src/app/add-restaurant/add-restaurant.page.html
+++ b/src/app/add-restaurant/add-restaurant.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title class="ion-text-center" size="small">Add Restaurant</ion-title>
+    <ion-title class="ion-text-center" size="med">Add Restaurant</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
@@ -13,6 +13,7 @@
 
     <ion-text> Add Restaurant </ion-text>
   </div>
+  
   <ion-item>
     <ion-label position="floating">Restaurant Name</ion-label>
     <ion-input
