--- a/src/app/add-restaurant/add-restaurant.page.html
+++ b/src/app/add-restaurant/add-restaurant.page.html
@@ -27,7 +27,7 @@
     <ion-input
       placeholder="Address"
       type="text"
-      [(ngModel)]="Address"
+      [(ngModel)]="address"
     ></ion-input>
   </ion-item>
 
@@ -42,6 +42,10 @@
   <ion-item>
     <ion-label position="floating">Tags</ion-label>
     <ion-input placeholder="Tags" type="text" [(ngModel)]="tags"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">Phone Number</ion-label>
+    <ion-input placeholder="Tags" type="text" [(ngModel)]="phoneNumber"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating" >Upload Image</ion-label>
