--- a/src/app/view-restaurant/view-restaurant.page.html
+++ b/src/app/view-restaurant/view-restaurant.page.html
@@ -27,7 +27,8 @@
         <ion-text>Name : {{restaurant.restaurantName}}</ion-text><br/>
         <ion-text>Description : {{restaurant.description}}</ion-text><br/>
         <ion-text>Tag : {{restaurant.tags}} </ion-text><br/><br/>
-            
+        <ion-text>Address : {{restaurant.address}} </ion-text><br/><br/> 
+        <ion-text>Phone Number : {{restaurant.phoneNumber}} </ion-text><br/><br/>  
         <ion-button  (click)="cancel()"> Cancel</ion-button>
     </div>
   </div>
