--- a/src/app/edit-restaurant/edit-restaurant.page.html
+++ b/src/app/edit-restaurant/edit-restaurant.page.html
@@ -27,6 +27,7 @@
           [(ngModel)]="name"
         ></ion-input>
       </ion-item>
+
       <ion-item>
         <ion-label position="floating">Address</ion-label>
         <ion-input
@@ -35,6 +36,7 @@
           [(ngModel)]="address"
         ></ion-input>
       </ion-item>
+
       <ion-item>
         <ion-label position="floating">Description</ion-label>
         <ion-input
@@ -43,12 +45,33 @@
           [(ngModel)]="description"
         ></ion-input>
       </ion-item>
-      <br />
+
+      <ion-item>
+        <ion-label position="floating">Phone Number</ion-label>
+        <ion-input
+          placeholder="Phone Number"
+          type="text"
+          [(ngModel)]="phoneNumber"
+        ></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Tags</ion-label>
+        <ion-input
+          placeholder="Tags"
+          type="text"
+          [(ngModel)]="tags"
+        ></ion-input>
+      </ion-item>
       
-      <ion-button position="floating" (click)="handleSave()">Save</ion-button>
-      <ion-button color="danger" (click)="cancel()" role="button"
-        >Cancel</ion-button
-      >
+      
+      <div style="padding: 25%;">
+        <ion-button position="floating" (click)="handleSave()">Save</ion-button>
+        <ion-button color="danger" (click)="cancel()" role="button"
+          >Cancel</ion-button
+        >
+      </div>
+      
     </div>
   </div>
 </ion-content>
