--- a/src/app/view-restaurant/view-restaurant.page.scss
+++ b/src/app/view-restaurant/view-restaurant.page.scss
@@ -15,3 +15,14 @@
       margin-right: 15%;
       margin-left: 15%;
   }
+#image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+ 
+  #image2{
+    width: 100%;
+    height: 100%;
+}
