--- a/src/app/add-restaurant/add-restaurant.page.html
+++ b/src/app/add-restaurant/add-restaurant.page.html
@@ -13,8 +13,7 @@
 
     <ion-text> Add Restaurant </ion-text>
   </div>
-  
-  <ion-item>
+    <ion-item>
     <ion-label position="floating">Restaurant Name</ion-label>
     <ion-input
       placeholder="Restaurant Name"
@@ -22,7 +21,6 @@
       [(ngModel)]="name"
     ></ion-input>
   </ion-item>
-
   <ion-item>
     <ion-label position="floating">Address</ion-label>
     <ion-input
@@ -31,20 +29,19 @@
       [(ngModel)]="address"
     ></ion-input>
   </ion-item>
-
   <ion-item>
     <ion-label position="floating">Description</ion-label>
-    <ion-textarea
+    <ion-input
       type="text"
       placeholder="Enter Description"
       [(ngModel)]="description"
-    ></ion-textarea>
+    ></ion-input>
   </ion-item>
     <ion-item>
       <ion-label position="floating">Phone Number</ion-label>
       <ion-input
         placeholder="Phone Number"
-        type="text"
+        type="number"
         [(ngModel)]="phoneNumber"
       ></ion-input>
     </ion-item>
@@ -60,12 +57,12 @@
   <br />
 
   <ion-row>
-    <ion-col col-6>
+    <ion-col >
       <ion-button color="danger" (click)="cancel()" role="button"
         >Cancel</ion-button
       >
     </ion-col>
-    <ion-col col-6>
+    <ion-col>
       <ion-button type="submit" (click)="addRestaurant()"
         >Add Restaurant</ion-button
       >
