--- a/src/app/view-restaurant/view-restaurant.page.html
+++ b/src/app/view-restaurant/view-restaurant.page.html
@@ -3,7 +3,11 @@
     <ion-title class="ion-text-center" size="med">View Restaurant</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="navigateToEditRestaurant(restaurant.id)">
-        <ion-icon slot="icon-only" name="create-outline" size="medium"></ion-icon>
+        <ion-icon
+          slot="icon-only"
+          name="create-outline"
+          size="medium"
+        ></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="start">
@@ -12,68 +16,75 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> 
+<ion-content>
   <div id="container">
-    <google-map
-    height="300px"
-    width="100%"
-    [center]="geo">
-      <map-marker
-      [position]="geo"
-      [title]="name"></map-marker>
+    <google-map height="300px" width="100%" [center]="geo">
+      <map-marker [position]="geo" [title]="name"></map-marker>
     </google-map>
-    <br/>
+    <br />
   </div>
   <div>
-    
     <div class="content">
       <ion-img
-            class="container__image"
-            src="../../assets/pasta.jpeg"
-            id="image"
-          ></ion-img>
-        <br/><ion-text><b> {{restaurant.restaurantName}}</b></ion-text><br/>
-        <ion-text> <b>{{restaurant.description}}</b></ion-text><br/>
-        <ion-text><b>Tags:</b> {{restaurant.tags}} </ion-text><br/><br/>
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <div id="details">
-                <ion-text><b>Address</b> <br/>{{restaurant.address}} </ion-text>
-                <ion-text>{{restaurant.phoneNumber}} </ion-text><br/><br/>
-              </div>
-            </ion-col>
-            <ion-col >
-
-              <div id="mapImage">
-                <ion-img
+        class="container__image"
+        src="../../assets/pasta.jpeg"
+        id="image"
+      ></ion-img>
+      <br /><ion-text><b> {{restaurant.restaurantName}}</b></ion-text
+      ><br />
+      <ion-text> <b>{{restaurant.description}}</b></ion-text
+      ><br />
+      <ion-text><b>Tags </b> {{restaurant.tags}} </ion-text><br /><br />
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <div id="details">
+              <ion-text><b>Address</b> <br />{{restaurant.address}} </ion-text>
+              <ion-text>{{restaurant.phoneNumber}} </ion-text><br /><br />
+            </div>
+          </ion-col>
+          <ion-col>
+            <div id="mapImage">
+              <ion-img
                 class="container__image"
                 src="../../assets/map.png"
                 id="image2"
-               height="60"
-               width = '120'
+                height="60"
+                width="120"
               ></ion-img>
-              </div>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-
-        <div>
-          <ion-icon name ="logo-facebook" md = "logo-facebook" size = 'large'color="primary-shade"></ion-icon>
-          <ion-icon name ="mail" md = "ios-mail" size = 'large'color="facebook"></ion-icon>
-          <ion-icon name ="logo-twitter" md = "logo-twitter" size = 'large'color="blue"></ion-icon>
-
-
-        </div>
-
-        <ion-row>
-            <ion-col col-2>
-              <ion-button color="danger" (click)="removePost(item)" role="button"> Cancel</ion-button>
-            </ion-col>
-            <ion-col col-2>
-              <ion-button  color="danger" (click)="cancel()" role="button"> Delete</ion-button>
-            </ion-col>
+            </div>
+          </ion-col>
         </ion-row>
+      </ion-grid>
+
+      <div>
+        <ion-icon
+          name="logo-facebook"
+          md="logo-facebook"
+          size="large"
+          color="tertiary"
+        ></ion-icon>
+        <ion-icon
+          name="logo-twitter"
+          md="logo-twitter"
+          size="large"
+          color="secondary"
+        ></ion-icon>
+        <ion-icon name="mail" md="mail" size="large" color="medium"></ion-icon>
+      </div>
+
+      <ion-row>
+        <ion-col>
+          <ion-button color="danger" (click)="removePost(item)" role="button">
+            Delete</ion-button
+          >
+        </ion-col>
+        <ion-col>
+          <ion-button color="danger" (click)="cancel()" role="button">
+            Cancel</ion-button
+          >
+        </ion-col>
+      </ion-row>
     </div>
   </div>
 </ion-content>
