Delete function is working

--- a/src/app/view-restaurant/view-restaurant.page.html
+++ b/src/app/view-restaurant/view-restaurant.page.html
@@ -75,7 +75,7 @@
 
       <ion-row>
         <ion-col>
-          <ion-button color="danger" (click)="removePost(item)" role="button">
+          <ion-button color="danger" (click)="removePost()" role="button">
             Delete</ion-button
           >
         </ion-col>
