Final working app

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,7 @@
 
   <ion-toolbar class="search">
     <ion-buttons slot="primary">
-      <ion-button (click)="clickedSearch()">
+      <ion-button (click)="search(item)">
         <ion-icon slot="icon-only" name="search"></ion-icon>
       </ion-button>
     </ion-buttons>
