--- a/src/app/view-restaurant/view-restaurant.page.html
+++ b/src/app/view-restaurant/view-restaurant.page.html
@@ -32,7 +32,7 @@
       ></ion-img>
       <br /><ion-text><b> {{restaurant.restaurantName}}</b></ion-text
       ><br />
-      <ion-text> <b>{{restaurant.description}}</b></ion-text
+      <ion-text> {{restaurant.description}}</ion-text
       ><br />
       <ion-text><b>Tags </b> {{restaurant.tags}} </ion-text><br /><br />
       <ion-grid>
